# RN_All_Issues

./: pyproject.toml  修改归档.md  手动运行归档流水线指南.md  自动归档流水线使用指南.md
.github/ISSUE_TEMPLATE/: -----.md  bug--.md
.github/workflows/: AutoArchiving.yml  CheckConfig.yml  DeployAutoArchiving.yml
config/: README.md  auto_archiving.json  issue_processor.json
rn_issue_auto_archiving/: push_document.py  push_document.sh
rn_issue_auto_archiving/auto_archiving/: develop-requirements.txt
rn_issue_auto_archiving/issue_processor/: issue_platform.py  json_config.py
rn_issue_auto_archiving/shared/: issue_info.py
rn_issues_auto_archiving/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  TODO.md  archiving_success.py  auto_archiving_main.py  example.env  issue_processor_main.py  main.py  push_document.py  修改归档.md
rn_issues_auto_archiving/auto_archiving/: archive_document.py  failed_record.py  http_request.py  json_config.py  reopen_issue.py  requirements.txt
rn_issues_auto_archiving/config/: auto_archiving.json  issue_processor.json
rn_issues_auto_archiving/issue_processor/: develop-requirements.txt  git_service_client.py  github_response_json.py  gitlab_response_json.py  issue_data_source.py  issue_platform.py  issues_processor.py
rn_issues_auto_archiving/shared/: api_path.py  ci_event_type.py  config_data_source.py  config_manager.py  data_source.py  env.py  exception.py  get_args.py  http_request.py  issue_info.py  issue_state.py  json_config.py  json_dumps.py  log.py  reopen_issue.py  send_comment.py
rn_issues_auto_archiving/src/: README.md  (+4 more)
(+18 files in other folders)
