[project]
description = "Add your description here"
name = "rn-issues-auto-archiving"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
  "httpx>=0.28.1",
  "json-repair>=0.52.3",
]

[tool.setuptools]
packages = ["rn_issues_auto_archiving"] # 显式白名单

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
  "python-dotenv>=1.1.1",
]
unittest = [
  "pytest>=8.4.2",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
unittest = [
  "pytest>=8.4.2",
  "httpx>=0.28.1",
]
